--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>goit-js-hw-11</title>
+    <title>goit-js-hw</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&display=swap"
       rel="stylesheet"
@@ -20,6 +20,6 @@
 
     <div class="gallery-container"></div>
 
-    <script type="module" src="./main.js" defer></script>
+    <script src="./main.js" type="module" defer></script>
   </body>
 </html>
