--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
 
     <ul class="gallery-container"></ul>
 
-    <button class="is-hidden" type="button" data-action="load-more">
+    <button class="load-more-btn is-hidden" type="button" data-action="load-more">
       Load more
     </button>
 
